PMD/CS/FB fixes and TestPlugin JUnit fix